--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -2044,6 +2044,18 @@ paths:
             application/json:
               schema:
                 $ref : '#/components/schemas/device-specifications'
+  /discovery/status/:
+    get:
+      description: Get status list. 
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref : '#/components/schemas/status'
   /my-client-configuration/:
     get: 
       description: Get the client configuration of the current user and the current application. 
