--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.2'
 info:
   title: API THEye
-  version: '0.33.0'
+  version: '0.33.1'
 servers:
   - url: https://backend.theye.ch/api/v0
   - url: https://staging.backend.theye.ch/api/v0
@@ -1067,7 +1067,7 @@ components:
         unit_system:
           type: string
           description: 
-            "Could be ether SI, IMPERIAL or USCS (Internaltional system of units,
+            "Can be either SI, IMPERIAL or USCS (International system of units,
             Imperial system of units or US Customary measurement system)."
           example: 'SI'
         currency:
