--- a/API-THEye.yml
+++ b/API-THEye.yml
@@ -1,7 +1,7 @@
 openapi: '3.0.2'
 info:
   title: API THEye
-  version: '0.33.1'
+  version: '0.34.0'
 servers:
   - url: https://backend.theye.ch/api/v0
   - url: https://staging.backend.theye.ch/api/v0
@@ -350,62 +350,67 @@ components:
         status:
           $ref: '#/components/schemas/status'
     devices:
-      type: array
-      items:
-        type: object
-        properties:
-          id:
-            type: string 
-            format: base16
-            maxLength: 12 
-            minLength: 12 
-            example: 0123456789AB 
-            readOnly: true
-          name:
-            type: string
-            example: Device A
-          owner:
+      type: object
+      properties:
+        devices:
+          type: array
+          items:
             type: object
             properties:
               id:
-                type: integer 
-                example: 1 
-                readOnly: true
-              first_name:
-                type: string
-                example: Alice
-              last_name:
-                type: string
-                example: Wonderland
-          type:
-            type: integer
-            example: 10
-            readOnly: true
-          model:
-            type: integer
-            example: 11
-            readOnly: true
-          hardware:
-            type: string
-            example: "2.3"
-            readOnly: True
-          battery_voltage:
-            type: integer
-            description: Battery voltage in mV [V]
-            example: "3300"
-          firmware:
-            type: string
-            example: "1.2"
-          organization:
-            type: object
-            properties:
-              id:
-                type: integer
-                example: 11
+                type: string 
+                format: base16
+                maxLength: 12 
+                minLength: 12 
+                example: 0123456789AB 
                 readOnly: true
               name:
                 type: string
-                example: Company X 
+                example: Device A
+              owner:
+                type: object
+                properties:
+                  id:
+                    type: integer 
+                    example: 1 
+                    readOnly: true
+                  first_name:
+                    type: string
+                    example: Alice
+                  last_name:
+                    type: string
+                    example: Wonderland
+              type:
+                type: integer
+                example: 10
+                readOnly: true
+              model:
+                type: integer
+                example: 11
+                readOnly: true
+              hardware:
+                type: string
+                example: "2.3"
+                readOnly: True
+              battery_voltage:
+                type: integer
+                description: Battery voltage in mV [V]
+                example: "3300"
+              firmware:
+                type: string
+                example: "1.2"
+              organization:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 11
+                    readOnly: true
+                  name:
+                    type: string
+                    example: Company X 
+        status:  
+          $ref: '#/components/schemas/status'
     device-public-info:
       type: object
       properties:
@@ -613,9 +618,14 @@ components:
               example: 0.03
               description: Long term temperature drift in [°C/year]
     device-specifications:
-      type: array
-      items:
-        $ref: '#/components/schemas/device-specification'
+      type: object
+      properties:
+        device_specifications: 
+          type: array
+          items:
+            $ref: '#/components/schemas/device-specification'
+        status:
+          $ref: '#/components/schemas/status'
     elog:
       type: object
       properties:
@@ -710,6 +720,15 @@ components:
           type: boolean 
         locking: 
           type: boolean 
+    logs:
+      type: object
+      properties:
+        logs:
+          type: array
+          items: 
+            $ref: '#/components/schemas/log'
+        status:
+          $ref: '#/components/schemas/status'
     log:
       type: object
       properties:
@@ -952,6 +971,15 @@ components:
           items:
             type: object 
             $ref : '#/components/schemas/price'
+    subscription-plans:
+      type: object
+      properties:
+        subscription_plans:
+          type: array
+          items: 
+            $ref : '#/components/schemas/plan' 
+        status:
+          $ref: '#/components/schemas/status'
     portal-session:
       type: object
       properties:
@@ -1086,7 +1114,6 @@ components:
         password:
           type: string
           example: SecretPa55word 
-
     synchronization-nonce:
       type: object
       properties:
@@ -1674,9 +1701,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref : '#/components/schemas/log'
+                $ref : '#/components/schemas/logs'
         '401':
           description: Unauthorized. 
         '400':
@@ -2641,9 +2666,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref : '#/components/schemas/plan' 
+                $ref : '#/components/schemas/subscription-plans' 
   /synchronization-nonce/:
     post:
       description: Get server nonce for server-device time synchronization. 
